language_tests/source_files/valid/existential_boxing_basic.tr
// Test: Existential Boxing Basic
// Checks defining and implementing a simple interface.

func main() {
    let v = MyValue { value: 10 }
    let p: any Printable = v
    p.print()
    
    std.print("PASS: Basic existential boxing\n")
}

interface Printable {
    func print(&self)
}

struct MyValue {
    value: int32
}

impl Printable for MyValue {
    func print(&self) {
    }
}
