language_tests/source_files/invalid/overlapping_marker_impls.tr
interface Marker {}

struct Widget {
    value: int32
}

impl Marker for Widget {}
impl Marker for Widget {}

func main() {
    let _ = Widget { value: 1 }
}
